--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -1,35 +1,46 @@
-name: Deploy Azure Function
+name: Deploy Azure Function App
 
 on:
   push:
     branches:
-      - main
+      - main  # Deploy only when pushing to main branch
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install Dependencies
+        run: npm install
 
-    - name: Build (if needed)
-      run: |
-        if [ -f package.json ]; then
-          npm run build --if-present
-        fi
+      - name: Load Azure credentials
+        run: |
+          echo '${{ secrets.AZURE_CREDENTIALS }}' > creds.json
+          export AZURE_SUBSCRIPTION_ID=$(jq -r .AZURE_SUBSCRIPTION_ID creds.json)
+          export RESOURCE_GROUP=$(jq -r .RESOURCE_GROUP creds.json)
+          export AZURE_CLIENT_ID=$(jq -r .AZURE_CLIENT_ID creds.json)
+          export AZURE_CLIENT_SECRET=$(jq -r .AZURE_CLIENT_SECRET creds.json)
+          export AZURE_TENANT_ID=$(jq -r .AZURE_TENANT_ID creds.json)
+          echo "AZURE_SUBSCRIPTION_ID=$AZURE_SUBSCRIPTION_ID" >> $GITHUB_ENV
+          echo "RESOURCE_GROUP=$RESOURCE_GROUP" >> $GITHUB_ENV
+          echo "AZURE_CLIENT_ID=$AZURE_CLIENT_ID" >> $GITHUB_ENV
+          echo "AZURE_CLIENT_SECRET=$AZURE_CLIENT_SECRET" >> $GITHUB_ENV
+          echo "AZURE_TENANT_ID=$AZURE_TENANT_ID" >> $GITHUB_ENV
 
-    - name: Azure Functions Action
-      uses: Azure/functions-action@v1
-      with:
-        app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
-        package: '.'
-        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+      - name: Build Azure Function
+        run: npm run build --if-present
+
+      - name: Deploy to Azure Functions
+        uses: Azure/functions-action@v1
+        with:
+          app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+          package: '.'
