--- a/.github/workflows/main_dbsqllist.yml
+++ b/.github/workflows/main_dbsqllist.yml
@@ -15,10 +15,10 @@ env:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
-      
+
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: 'Resolve Project Dependencies Using Npm'
-        shell: pwsh
+        shell: bash
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
@@ -37,14 +37,17 @@ jobs:
           npm run test --if-present
           popd
 
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -55,13 +58,16 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_34CBF889E43140B7972524350F100280 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_382E2500471D432BB258AAF74ABD672B }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7E9E5F23A26241DE8932E0C4C58CC4EE }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_BD35E83D54F04AE3A06A12F850A5A282 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6895754A25174EB0A6DF47AB00B68AD3 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_05E4C35DF2264FCE8AEE119CC1F6C72C }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
