--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "azure-sql-functions",
   "version": "1.0.0",
   "dependencies": {
+    "@azure/arm-resources": "^6.1.0",
     "@azure/arm-sql": "^10.0.0",
     "@azure/identity": "^2.1.0"
   }
