--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@azure/arm-resources": "^6.1.0",
     "@azure/arm-sql": "^10.0.0",
-    "@azure/identity": "^2.1.0"
+    "@azure/identity": "^2.1.0",
+    "mssql": "^11.0.1"
   }
 }
